--- a/src/app/states/achievements/achievements.scss
+++ b/src/app/states/achievements/achievements.scss
@@ -90,8 +90,30 @@ material-content {
   justify-content: space-between;
 
   .filters-input {
-    input {
+    position: relative;
+    display: flex;
+    align-items: center;
 
+    input {
+      width: 100%;
+      height: 40px;
+      max-width: 400px;
+      background: $color-grey-light;
+      color: $color-grey-dark;
+      padding: 5px;
+      border: 2px solid $color-grey-normal;
+      border-radius: 3px;
+      outline: none;
+    }
+
+    i.material-icons {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      position: absolute;
+      right: 0;
+      margin-right: 10px;
+      outline: none;
     }
   }
 
