--- a/src/app/states/main/main.scss
+++ b/src/app/states/main/main.scss
@@ -51,5 +51,11 @@ view-wrapper.main {
         color: $color-green_normal;
       }
     }
+
+    &--yellow {
+      &:hover {
+        color: $color_yellow_normal;
+      }
+    }
   }
 }
