--- a/src/app/states/achievements/achievement/achievement.html
+++ b/src/app/states/achievements/achievement/achievement.html
@@ -36,126 +36,111 @@
   </div>
   <div class="achievement-users">
     <material-tabs>
-      <input type="radio"
+      <input ng-repeat-start="(tabKey, tabInfo) in achievementCtrl.tabs track by tabKey"
+             type="radio"
              name="tab"
-             id="{{achievementCtrl.tabs.ACHIEVED}}"
-             ng-value="achievementCtrl.tabs.ACHIEVED"
+             id="{{tabInfo.value}}"
+             ng-value="tabInfo"
              ng-model="selectedTab"
-             checked>
-      <material-tab>
-        <label class="material-tab-label" for="{{achievementCtrl.tabs.ACHIEVED}}">Награжденные пользователи</label>
-        <material-tab-content ng-if="selectedTab === achievementCtrl.tabs.ACHIEVED">
-          <material-card
-            ng-repeat="userAchievement in achievementCtrl.users | orderBy:'date' track by userAchievement.id"
-            ng-if="userAchievement.user">
-            <material-card-title>
-              <material-card-title-text>
-                <span class="material-headline" ng-bind="userAchievement.user.name"></span>
-                <span class="material-subhead" ng-bind="userAchievement.date | date:'dd/MM/yyyy hh:mm:ss'"></span>
-              </material-card-title-text>
-              <material-card-title-media ng-if="userAchievement.user.photo">
-                <div class="material-media-med">
-                  <img ng-src="data:image/png;base64,{{userAchievement.user.photo}}" alt=""/>
-                </div>
-              </material-card-title-media>
-            </material-card-title>
-            <material-card-content>
-              <p ng-bind="userAchievement.comment"></p>
-            </material-card-content>
-            <material-card-actions>
-              <material-button class="material-icon-button material-button--yellow"
-                               title="Лишить пользователя достижения"
-                               ng-click="achievementCtrl.toggleAchievement(userAchievement, false)">
-                <i class="material-icons">star</i>
-              </material-button>
-              <material-button class="material-icon-button material-button--green"
-                               title="Просмотреть информацию о пользователе"
-                               ng-click="achievementCtrl.goToUser(userAchievement.user.id)">
-                <i class="material-icons">info</i>
-              </material-button>
-            </material-card-actions>
-          </material-card>
-          <div class="empty-state" ng-if="!achievementCtrl.users.length">
-            <h3 class="header"><i class="material-icons">error_outline</i>Нет награжденных пользователей</h3>
-          </div>
-        </material-tab-content>
-      </material-tab>
-      <input type="radio"
-             name="tab"
-             id="{{achievementCtrl.tabs.OTHERS}}"
-             ng-value="achievementCtrl.tabs.OTHERS"
-             ng-model="selectedTab">
-      <material-tab>
-        <label class="material-tab-label" for="{{achievementCtrl.tabs.OTHERS}}">Остальные пользователи</label>
-        <material-tab-content ng-if="selectedTab === achievementCtrl.tabs.OTHERS">
-          <div class="filters" ng-if="achievementCtrl.users.length">
-            <div class="filters-input">
-
-            </div>
-            <div class="filters-checkboxes">
-
-            </div>
-          </div>
-          <material-card
-            ng-repeat="user in achievementCtrl.users | orderBy:'date' track by user.id"
-            ng-if="user">
-            <material-card-title>
-              <material-card-title-text>
-                <span class="material-headline" ng-bind="user.name"></span>
-                <span class="material-subhead" ng-bind="date | date:'dd/MM/yyyy hh:mm:ss'"></span>
-              </material-card-title-text>
-              <material-card-title-media ng-if="user.photo">
-                <div class="material-media-med">
-                  <img ng-src="data:image/png;base64,{{user.photo}}" alt=""/>
-                </div>
-              </material-card-title-media>
-            </material-card-title>
-            <material-card-content>
-              <p ng-bind="user.bio"></p>
-            </material-card-content>
-            <material-card-actions>
-              <div class="comment-input" ng-if="user.userAchievement">
-                <form name="userAchievementForm">
-                  <material-input-container>
-                    <input required
-                           ng-model="user.userAchievement.comment">
-                    <label>Введите комментарий:</label>
-                  </material-input-container>
-                  <material-button class="material-icon-button material-button--green"
-                                   type="submit"
-                                   ng-disabled="!userAchievementForm.$valid"
-                                   title="Присвоить достижение"
-                                   ng-click="achievementCtrl.saveUserAchievement(user.userAchievement)">
-                    <i class="material-icons">done</i>
+             ng-change="achievementCtrl.selectTab(tabInfo)">
+      <material-tab ng-repeat-end>
+        <label class="material-tab-label" for="{{tabInfo.value}}" ng-bind="tabInfo.name"></label>
+        <material-tab-content ng-if="selectedTab.value === tabInfo.value">
+          <div
+            ng-repeat="tabContentElm in filtered = (achievementCtrl.users | orderBy:'obj.date') track by tabContentElm.obj.id"
+            ng-switch="tabContentElm.type">
+            <div ng-switch-when="ACHIEVED">
+              <material-card ng-if="tabContentElm.obj.user">
+                <material-card-title>
+                  <material-card-title-text>
+                    <span class="material-headline" ng-bind="tabContentElm.obj.user.name"></span>
+                    <span class="material-subhead"
+                          ng-bind="tabContentElm.obj.date | date:'dd/MM/yyyy hh:mm:ss'"></span>
+                  </material-card-title-text>
+                  <material-card-title-media ng-if="tabContentElm.obj.user.photo">
+                    <div class="material-media-med">
+                      <img ng-src="data:image/png;base64,{{tabContentElm.obj.user.photo}}" alt=""/>
+                    </div>
+                  </material-card-title-media>
+                </material-card-title>
+                <material-card-content>
+                  <p ng-bind="tabContentElm.obj.comment"></p>
+                </material-card-content>
+                <material-card-actions>
+                  <material-button class="material-icon-button material-button&#45;&#45;yellow"
+                                   title="Лишить пользователя достижения"
+                                   ng-click="achievementCtrl.toggleAchievement(tabContentElm.obj, false)">
+                    <i class="material-icons">star</i>
                   </material-button>
-                  <material-button class="material-icon-button material-button--red"
-                                   type="reset"
-                                   title="Отменить присвоение"
-                                   ng-click="user.userAchievement = null">
-                    <i class="material-icons">clear</i>
+                  <material-button class="material-icon-button material-button&#45;&#45;green"
+                                   title="Просмотреть информацию о пользователе"
+                                   ng-click="achievementCtrl.goToUser(tabContentElm.obj.user.id)">
+                    <i class="material-icons">info</i>
                   </material-button>
-                </form>
-              </div>
-              <material-button class="material-icon-button material-button--yellow"
-                               title="Дать пользователю достижение"
-                               ng-if="!user.userAchievement"
-                               ng-click="achievementCtrl.toggleAchievement(user, true)">
-                <i class="material-icons">star_border</i>
-              </material-button>
-              <material-button class="material-icon-button material-button--green"
-                               title="Просмотреть информацию о пользователе"
-                               ng-click="achievementCtrl.goToUser(user.id)">
-                <i class="material-icons">info</i>
-              </material-button>
-            </material-card-actions>
-          </material-card>
+                </material-card-actions>
+              </material-card>
+            </div>
+            <div ng-switch-when="OTHERS">
+              <material-card ng-if="tabContentElm.obj">
+                <material-card-title>
+                  <material-card-title-text>
+                    <span class="material-headline" ng-bind="tabContentElm.obj.name"></span>
+                  </material-card-title-text>
+                  <material-card-title-media ng-if="tabContentElm.obj.photo">
+                    <div class="material-media-med">
+                      <img ng-src="data:image/png;base64,{{tabContentElm.obj.photo}}" alt=""/>
+                    </div>
+                  </material-card-title-media>
+                </material-card-title>
+                <material-card-content>
+                  <p ng-bind="tabContentElm.obj.bio"></p>
+                </material-card-content>
+                <material-card-actions>
+                  <div class="comment-input" ng-if="tabContentElm.obj.userAchievement">
+                    <form name="userAchievementForm">
+                      <material-input-container>
+                        <input required
+                               ng-model="tabContentElm.obj.userAchievement.comment">
+                        <label>Введите комментарий:</label>
+                      </material-input-container>
+                      <material-button class="material-icon-button material-button&#45;&#45;green"
+                                       type="submit"
+                                       ng-disabled="!userAchievementForm.$valid"
+                                       title="Присвоить достижение"
+                                       ng-click="achievementCtrl.saveUserAchievement(tabContentElm.obj.userAchievement)">
+                        <i class="material-icons">done</i>
+                      </material-button>
+                      <material-button class="material-icon-button material-button&#45;&#45;red"
+                                       type="reset"
+                                       title="Отменить присвоение"
+                                       ng-click="tabContentElm.obj.userAchievement = null">
+                        <i class="material-icons">clear</i>
+                      </material-button>
+                    </form>
+                  </div>
+                  <material-button class="material-icon-button material-button&#45;&#45;yellow"
+                                   title="Дать пользователю достижение"
+                                   ng-if="!tabContentElm.obj.userAchievement"
+                                   ng-click="achievementCtrl.toggleAchievement(tabContentElm.obj, true)">
+                    <i class="material-icons">star_border</i>
+                  </material-button>
+                  <material-button class="material-icon-button material-button&#45;&#45;green"
+                                   title="Просмотреть информацию о пользователе"
+                                   ng-click="achievementCtrl.goToUser(tabContentElm.obj.id)">
+                    <i class="material-icons">info</i>
+                  </material-button>
+                </material-card-actions>
+              </material-card>
+            </div>
+          </div>
           <div class="empty-state" ng-if="!achievementCtrl.users.length">
-            <h3 class="header"><i class="material-icons">error_outline</i>Нет ненагражденных пользователей</h3>
+            <h3 class="header">
+              <i class="material-icons">error_outline</i>Нет награжденных пользователей
+            </h3>
           </div>
         </material-tab-content>
       </material-tab>
       <div class="slide"></div>
     </material-tabs>
   </div>
-
 </material-content>
