Animation fixes: switching cards and ng-repeat.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -75,7 +75,7 @@ $layout-breakpoint-sm: 960px !default;
 $layout-breakpoint-md: 1280px !default;
 $layout-breakpoint-lg: 1920px !default;
 
-$swift-ease-out-duration: 0.4s !default;
+$swift-ease-out-duration: 0.3s !default;
 $swift-ease-out-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1) !default;
 $swift-ease-out: all $swift-ease-out-duration $swift-ease-out-timing-function !default;
 
@@ -83,21 +83,13 @@ $swift-ease-in-duration: 0.3s !default;
 $swift-ease-in-timing-function: cubic-bezier(0.55, 0, 0.55, 0.2) !default;
 $swift-ease-in: all $swift-ease-in-duration $swift-ease-in-timing-function !default;
 
-$swift-ease-in-out-duration: 0.5s !default;
+$swift-ease-in-out-duration: 0.3s !default;
 $swift-ease-in-out-timing-function: cubic-bezier(0.35, 0, 0.25, 1) !default;
 $swift-ease-in-out: all $swift-ease-in-out-duration $swift-ease-in-out-timing-function !default;
 
 $swift-linear-duration: 0.08s !default;
 $swift-linear-timing-function: linear !default;
 $swift-linear: all $swift-linear-duration $swift-linear-timing-function !default;
-
-$material-enter-duration: 0.3s;
-$material-enter-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
-$material-enter: all $material-enter-duration $material-enter-timing-function;
-
-$material-leave-duration: 0.3s;
-$material-leave-timing-function: cubic-bezier(0.4, 0.0, 1, 1);
-$material-leave: all $material-leave-duration $material-leave-timing-function;
 
 $material-toolbar-height: 64px;
 
@@ -115,14 +107,48 @@ $material-toolbar-height: 64px;
   }
 }
 
+@mixin ng-repeat-animations {
+  &.ng-move,
+  &.ng-enter,
+  &.ng-leave {
+    transition: $swift-ease-out;
+  }
+
+  &.ng-leave.ng-leave-active,
+  &.ng-move,
+  &.ng-enter {
+    opacity: 0;
+    max-height: 0;
+  }
+
+  &.ng-leave,
+  &.ng-move.ng-move-active,
+  &.ng-enter.ng-enter-active {
+    opacity: 1;
+    max-height: none;
+  }
+}
+
 @mixin switching-cards {
   $animation-duration: 0.3s;
+  $translate-amount: 2000px;
+
+  material-card,
+  achievement-card,
+  user-card {
+    &.ng-enter,
+    &.ng-leave {
+      transition: $swift-ease-out;
+    }
+  }
 
   material-card {
     &.ng-enter {
-      animation: $animation-duration bounce-left;
-      animation-timing-function: $swift-ease-out-timing-function;
-      animation-fill-mode: forwards;
+      transform: translateX(-#{$translate-amount});
+
+      &.ng-enter-active {
+        transform: translateX(0);
+      }
     }
 
     &.ng-leave {
@@ -133,9 +159,11 @@ $material-toolbar-height: 64px;
   achievement-card,
   user-card {
     &.ng-enter {
-      animation: $animation-duration bounce-right;
-      animation-timing-function: $swift-ease-out-timing-function;
-      animation-fill-mode: forwards;
+      transform: translateX(#{$translate-amount});
+
+      &.ng-enter-active {
+        transform: translateX(0);
+      }
     }
 
     &.ng-leave {
