--- a/src/app/states/achievements/achievements.html
+++ b/src/app/states/achievements/achievements.html
@@ -1,8 +1,12 @@
 <material-content class="achievements"
                   ng-class="{'achievements--no-scroll': achievementsCtrl.achievements.hasActive()}">
   <h3 class="material-display-1">Все достижения</h3>
-  <div class="achievements-new-card">
-    <material-card ng-if="!achievementsCtrl.isCardAdding">
+  <div class="achievements-new-card switching-cards" ng-switch="achievementsCtrl.isCardAdding">
+    <achievement-card ng-switch-when="true"
+                      achievement="achievementsCtrl.newAchievement"
+                      save-achievement="achievementsCtrl.saveNewAchievement(achievement, $event)"
+                      close-achievement="achievementsCtrl.closeAddingCard()"></achievement-card>
+    <material-card ng-switch-default>
       <material-card-title ng-click="achievementsCtrl.openAddingCard()"
                            ng-class="{'clickable': !achievementsCtrl.isCardAdding}">
         <material-card-title-text>
@@ -10,10 +14,6 @@
         </material-card-title-text>
       </material-card-title>
     </material-card>
-    <achievement-card ng-if="achievementsCtrl.isCardAdding"
-                      achievement="achievementsCtrl.newAchievement"
-                      save-achievement="achievementsCtrl.saveNewAchievement(achievement, $event)"
-                      close-achievement="achievementsCtrl.closeAddingCard()"></achievement-card>
   </div>
   <div class="achievements-cards">
     <div class="filters">
@@ -39,16 +39,17 @@
       </div>
     </div>
     <div class="achievements-card"
-         ng-repeat="achievement in filtered = (achievementsCtrl.achievements.cards | archivedName:filters | orderBy:'obj.name') track by achievement.obj.id">
+         ng-repeat="achievement in filtered = (achievementsCtrl.achievements.cards | archivedName:filters | orderBy:'obj.name') track by achievement.obj.id"
+         ng-switch="achievement.$active">
       <achievement-card
-        ng-if="achievement.$active"
+        ng-switch-when="true"
         ng-class="{'active': achievement.$active}"
         active="achievement.$active"
         achievement="achievement.objCopy"
         save-achievement="achievementsCtrl.saveAchievement(achievement, $event)"
         close-achievement="achievement.closeEditingAchievement($event)"></achievement-card>
       <material-card
-        ng-if="!achievement.$active">
+        ng-switch-default>
         <material-card-title>
           <material-card-title-text>
             <span class="material-headline" ng-bind="achievement.obj.name"></span>
